[project]
name = "quantitative-finance"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "pandas (>=2.2.0,<3.0.0)",
    "numpy (>=1.26.0,<2.0.0)",
    "scipy (>=1.10.0,<2.0.0)",
    "scikit-learn (>=1.3.0,<1.4.0)",
    "pandas-datareader (>=0.10.0,<0.11.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
